hapihfir/hapifhir-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hapifhir
  namespace: cooking-on-fire
spec:
  selector:
    matchLabels:
      app: hapifhir
  template:
    metadata:
      labels:
        app: hapifhir
    spec:
      containers:
      - name: postgres
        image: hapiproject/hapi:v5.4.1
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 8080
