hapihfir/hapifhir-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hapifhir
  namespace: cooking-on-fire
spec:
  selector:
    app: hapifhir
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
